Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Heshie Brody is a NYS licensed Mortgage Broker and Real Estate Broker that returned to school to learn how to code after realizing that what really matters is not 'what you do' only that 'you have to love what you do'. He was born in Brooklyn NY and realized his passion in tech and breaking stuff when he started taking apart computers @ age 9. After discovering the developer tab in excel at 14 years old he taught himself to code using a 'Visual Basic for Dummies' book which he then quickly used to write software that displayed a dialog showing the user that their hard drive is being wiped and had it installed on the school computer. Today he is studying web development at Flatiron School and hopes to graduate in 2019. Also, he wrote this entire thing in the third person.</p>
